@@ -1,5 +1,13 @@
 2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/SyncDialog.cs, Tomboy/SyncManager.cs: Apparently better
+	  conflict handling.  No need to delete if sync can overwrite, no
+	  need to rename old note if it's being deleted anyway, etc.  Need to
+	  clean up still, decide whether or not to support updating
+	  referencing notes on that sort of rename.
+
+2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy/TomboySyncClient.cs: "Fixed" manifest parsing code.
 
 2007-07-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 
